# bingo-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: bingo.rs  cli.yml  logger.rs  main.rs
