[package]
name = "bingo_generator"
version = "0.1.0"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.19.2"
image = { version = "0.22.2", default-features = false }
rusttype = "0.8.2"
textwrap = "0.11"
rand = "0.7.2"
clap = {version = "2.33", features = ["yaml"]}

[dev-dependencies]
image = "0.22.2"