[package]
name = "bingo_generator"
version = "0.1.1"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.20"
image = { version = "0.23", default-features = false }
rusttype = "0.8.3"
textwrap = "0.11"
rand = "0.7"
clap = {version = "2.33", features = ["yaml"]}
ttf-firacode = "0.1.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
termcolor = "1.1"

[dev-dependencies]
image = "0.23"